<resources>
    <string name="app_name">ימות המשיח</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preferences_header">Preferences</string>
    <string name="advanced">advanced</string>
    <string name="language_title">language</string>
    <string name="default_lang">default</string>
    <string name="ask">Ask before action</string>
    <string name="paste_later_copy_move">paste later copy / move</string>
    <string name="delete">delete</string>
    <string name="logout">logout</string>
    <string name="login">login</string>
    <string name="system_number">system number</string>
    <string name="password">password</string>
    <string name="loading">loading…</string>
    <string name="orgination">Organization name</string>
    <string name="calls">calls</string>
    <string name="camp">campaigns</string>
    <string name="camp_card">Active campaigns | Scheduled campaigns</string>
    <string name="minutes">minutes</string>
    <string name="units">units</string>
    <string name="change_manger_password">Change management password</string>
    <string name="ext_explorer">Explorer extensions</string>
    <string name="customer_name">customer name</string>
    <string name="mail">mail</string>
    <string name="telephone">telephone</string>
    <string name="fax">fax</string>
    <string name="orgination_name">Organization name</string>
    <string name="contact_name">Contact name</string>
    <string name="Invoice_name">Invoice in the name of</string>
    <string name="address_to_send_Invoice">Invoice delivery address</string>
    <string name="access_password">access password</string>
    <string name="recording_password">recording password</string>
    <string name="save">save</string>
    <string name="home_menu">home</string>
    <string name="system_details_menu">system details</string>
    <string name="open_navigation" translatable="false">open</string>
    <string name="close_navigation" translatable="false">close</string>
    <string name="terms">terms</string>
    <string name="agree_not_yemot">I agree that this application was not developed by \'ימות המשיח\' and \'ימות המשיח\' does not provide support for the application and is not responsible for any direct or indirect damage caused by the application.</string>
    <string name="agree_terms">I agree to the terms of use.</string>
    <string name="copyright">דוגמא, אין להעבירת, להעתיק , להסריט, פותח על ידי office@y-fox.com</string>
    <string name="later_paste">paste</string>
    <string name="paste_later_copy_move_summary">Paste after copying / moving</string>
    <string name="selected">"selected"</string>
    <string name="system_logout">logout from system</string>
    <string name="sip">sip</string>
    <string name="system_calls">calls in system</string>
    <string name="sms">sms</string>
    <string name="securing">securing</string>
    <string name="more_option">more options</string>
    <string name="error_invalid_username">Error: Invalid username or password</string>
    <string name="error_account_blocked">Error: Account blocked</string>
    <string name="transfer_units">Transferring units to another system.</string>
    <string name="filter">filter</string>
    <string name="all">all</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="outgoing_identification_number">outgoing identification number</string>
    <string name="from_which_traffic_to_display">From which traffic to display?</string>
    <string name="maximum_number_of_movements_to_include">Maximum number of movements to include</string>
    <string name="verification_code">verification code</string>
    <string name="verification">verification</string>
    <string name="sender_id">Sender ID</string>
    <string name="default_primary_system_id">Default primary system ID.</string>
    <string name="content_of_the_message">content message</string>
    <string name="the_charge_is_0_1_unit_per_70_characters_the_charge_is_per_phone_number">The charge is 0.1 unit per 70 characters (the charge is per phone number)</string>
    <string name="flash_message">Flash message?</string>
    <string name="a_flash_message_will_be_sent_to_the_customer_and_pop_up_on_the_phone_in_full_screen_the_option_may_not_work_on_certain_phones_certain_operators_and_it_is_possible_that_certain_recipients_will_recognize_the_message_as_a_normal_message">A flash message will be sent to the customer and pop up on the phone in full screen. The option may not work on certain phones/certain operators and it is possible that certain recipients will recognize the message as a normal message.</string>
    <string name="recipients">Recipients</string>
    <string name="separation_of_between_each_number_or_tpl_the_campaign_id_in_order_to_send_to_a_distribution_list_in_the_system">Separation of : between each number, or tpl: the campaign ID in order to send to a distribution list in the system.</string>
    <string name="send">send</string>
    <string name="verification_is_valid_for_one_month_after_one_month_of_verification_the_number_will_be_removed_and_it_will_be_necessary_to_verify_it_again_verification_of_an_existing_number_will_extend_the_validity_of_the_number_s_verification_by_one_month_from_the_time_of_verification">Verification is valid for one month. After one month of verification, the number will be removed and it will be necessary to verify it again. Verification of an existing number will extend the validity of the number\'s verification by one month from the time of verification.</string>
    <string name="number">number</string>
    <string name="the_authentication_type">The authentication type</string>
    <string name="call">call</string>
    <string name="note_sending_a_verification_sms_call_has_a_unit_cost_according_to_the_normal_rate">Note: sending a verification SMS/call has a unit cost according to the normal rate.</string>
    <string name="next">next</string>
    <string name="the_received_code">The received code</string>
    <string name="where_to_transfer">Where to transfer?</string>
    <string name="the_amount_of_units_to_transfer">The amount of units to transfer.</string>
    <string name="transfer">transfer</string>
    <string name="the_function_is_not_active">The function is not active</string>
    <string name="file_management">File Management</string>
    <string name="system_messages">system messages</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="settings">Settings</string>
    <string name="copy">copy</string>
    <string name="change_name">change name</string>
    <string name="whether_to_display_a_report_after_a_delete_move_copy_operation">Whether to display a report after a delete/move/copy operation.</string>
    <string name="displaying_an_action_report">Displaying an action report</string>
    <string name="when_deleting_a_file">When deleting a file</string>
    <string name="by_clicking_logout_from_the_system">By clicking logout from the system</string>
    <string name="activating_the_beta_options">Activating the beta options</string>
    <string name="beta">beta</string>
    <string name="introducing_experimental_features">Introducing experimental features</string>
    <string name="personalization_with_the_help_of_artificial_intelligence">Personalization with the help of artificial intelligence</string>
    <string name="a_personalization_feature_using_artificial_intelligence_allows_the_application_to_adapt_itself_based_on_the_recognition_of_your_pages_this_is_a_beta_function_that_helps_the_application_work_in_a_more_appropriate_and_convenient_way">A personalization feature using artificial intelligence allows the application to adapt itself based on the recognition of your pages. This is a beta function that helps the application work in a more appropriate and convenient way.</string>
    <string name="click_on_the_pencil_to_send_sms"><![CDATA[Click on the pencil to send SMS >]]></string>
    <string name="history">history</string>
    <string name="loading_account_details">Loading account details...</string>
    <string name="username">Username</string>
    <string name="the_application_must_be_updated">The application must be updated</string>
    <string name="download">Download</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="check_your_internet_connection_and_click_try_again">Check your internet connection and click \'try again\'</string>
    <string name="exit">exit</string>
    <string name="try_again">Try again</string>
    <string name="sip_server_address">SIP server address</string>
    <string name="extension_number">extension number</string>
    <string name="protocol">protocol</string>
    <string name="creation_date">Creation date</string>
    <string name="committed_system">Committed system</string>
    <string name="outbound_id">Outbound ID</string>
    <string name="action_s">action\'s</string>
    <string name="change_protocol">Change protocol</string>
    <string name="outgoing_id_change">Outgoing ID change</string>
    <string name="delete_account">delete account</string>
    <string name="closing_all_active_sessions">Closing all active sessions</string>
    <string name="active_sessions">Active sessions</string>
    <string name="in_order_to_access_the_security_area_you_must_go_through_two_step_verification_on_this_connection_n_the_call_will_reach_the_updated_phone_as_the_system_creator_n_by_pressing_the_button_you_will_receive_a_call_you_must_remember_the_last_4_digits_of_the_number_that_called_you_and_tap_them_on_the_next_screen">In order to access the security area, you must go through two-step verification on this connection. \n The call will reach the updated phone as the system creator. \n By pressing the button you will receive a call, you must remember the last 4 digits of the number that called you and tap them on the next screen.</string>
    <string name="login_log">Login log</string>
    <string name="two_step_verification">Two-step verification</string>
    <string name="please_enter_the_last_4_digits_of_the_phone_number_from_which_you_just_received_a_call_in_the_code_field">Please enter the last 4 digits of the phone number from which you just received a call in the code field:</string>
    <string name="the_authentication_was_successfully_completed">The authentication was successfully completed</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="no_information_was_received_about_the_delivery_of_the_message">No information was received about the delivery of the message</string>
    <string name="delivered">Delivered</string>
    <string name="successfully_sent">Successfully sent</string>
    <string name="delivery_tracking_has_expired">Delivery tracking has expired</string>
    <string name="unreachable_destination">Unreachable destination</string>
    <string name="invalid_length">Invalid length</string>
    <string name="invalid_command_length">Invalid command length</string>
    <string name="the_message_queue_is_full">The message queue is full</string>
    <string name="invalid_destination_number">Invalid destination number</string>
    <string name="conclusion">Conclusion</string>
    <string name="success">success</string>
    <string name="error">Error</string>
    <string name="not_enough_units">Not enough units</string>
    <string name="action_status">"Action status:"</string>
    <string name="content_of_the_message_with_colon">content of the message:</string>
    <string name="the_id_from_which_the_message_originated">The ID from which the message originated:</string>
    <string name="how_many_messages_have_been_sent">How many messages have been sent:</string>
    <string name="payment">payment:</string>
    <string name="error_with_colon">Error:</string>
</resources>