<?xml version= "1.0" encoding= "utf-8" ?>
<menu xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:showIn= "navigation_view" >
    <group android:checkableBehavior= "single" >
        <item
            android:id= "@+id/nav_home"
            android:icon= "@drawable/ic_baseline_home_24"
            android:title= "@string/home_menu" />
        <item
            android:id= "@+id/nav_info"
            android:icon= "@drawable/ic_baseline_info_24"
            android:title= "@string/system_details_menu" />
        <item
            android:id= "@+id/nav_units"
            android:icon= "@drawable/ic_baseline_attach_money_24"
            android:title= "@string/units" />
        <item
            android:id= "@+id/nav_explorer"
            android:icon= "@drawable/ic_baseline_explore_24"
            android:title= "@string/ext_explorer" />
        <item
            android:id= "@+id/nav_call"
            android:icon= "@drawable/ic_baseline_call_24"
            android:title= "@string/system_calls" />
        <item
            android:id= "@+id/nav_sms"
            android:icon= "@drawable/ic_baseline_sms_24"
            android:title= "@string/sms" />
        <item
            android:id= "@+id/nav_fax"
            android:icon= "@drawable/ic_baseline_fax_24"
            android:title= "@string/fax" />
        <item
            android:id= "@+id/nav_sec"
            android:icon= "@drawable/ic_baseline_security_24"
            android:title= "@string/securing" />
        <item
            android:id= "@+id/nav_sip"
            android:icon= "@drawable/ic_baseline_dialer_sip_24"
            android:title= "@string/sip" />
        <item
            android:id= "@+id/nav_more_actions"
            android:icon= "@drawable/ic_baseline_more_vert_24"
            android:title= "@string/more_option" />
    </group>
</menu>