<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory app:title="@string/preferences_header">

        <ListPreference
            app:defaultValue="default"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:id="@+id/switchPreferenceCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="true"
            app:key="report"
            app:summary="האם להציג דוח לאחר פעולה מחיקה/העברה/העתקה."
            app:title="הצגת דוח פעולה" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ask">


        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="delete"
            app:summary="במחיקת קובץ"
            app:title="@string/delete" />
        <SwitchPreferenceCompat
            app:key="paste"
            app:summary="@string/paste_later_copy_move_summary"
            app:title="@string/later_paste" />
        <SwitchPreferenceCompat
            app:key="logout"
            app:summary="בלחיצה על התנתקות"
            app:title="@string/logout" />
    </PreferenceCategory>

    <PreferenceCategory app:title="בטא">


        <SwitchPreferenceCompat
            app:key="beta"
            app:title="הפעלת אפשרויות הבטא"
            app:summary="הצגת תכונות נסיוניות" />


        <SwitchPreferenceCompat
            app:key="customize_app"
            app:title="התאמה אישית בעזרת בינה מלאכותית"
            app:summary="תכונת התאמה אישית באמצעות בינה מלאכותית מאפשרת לאפליקציה להתאים את התנאים למשתמש על־פי זיהוי ההדפות שלו. זו פונקציות בטא משמעותית שמסייעת לאפליקציה לעבוד בצורה יותר מתאימה ונוחה עבור המשתמש."
            app:dependency="beta"/>

    </PreferenceCategory>

</PreferenceScreen>