<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnr_dialog_send_sms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField1000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:hint="@string/sender_id"
                    app:helperText="@string/default_primary_system_id"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNumber100"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:hint="@string/content_of_the_message"
                    app:counterEnabled="true"
                    app:counterMaxLength="70"
                    app:helperText="@string/the_charge_is_0_1_unit_per_70_characters_the_charge_is_per_phone_number"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNumber22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="70"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/flash_message"
                    android:tooltipText="@string/a_flash_message_will_be_sent_to_the_customer_and_pop_up_on_the_phone_in_full_screen_the_option_may_not_work_on_certain_phones_certain_operators_and_it_is_possible_that_certain_recipients_will_recognize_the_message_as_a_normal_message" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFielddd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:hint="@string/recipients"
                    app:helperText="@string/separation_of_between_each_number_or_tpl_the_campaign_id_in_order_to_send_to_a_distribution_list_in_the_system"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNumber222"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_send_sms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/send" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnr_dialog_send_sms_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateOnly="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>