<?xml version= "1.0" encoding= "utf-8" ?>
<menu xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:showIn= "navigation_view" >
    <group android:checkableBehavior= "single" >
        <item
            android:id= "@+id/nav_home"
            android:icon= "@drawable/ic_baseline_call_24"
            android:title= "@string/home_menu" />
        <item
            android:id= "@+id/nav_info"
            android:icon= "@drawable/ic_baseline_call_24"
            android:title= "@string/system_details_menu" />
        <item
            android:id= "@+id/nav_units"
            android:icon= "@drawable/ic_baseline_call_24"
            android:title= "יחידות" />
        <item
            android:id= "@+id/nav_explorer"
            android:icon= "@drawable/ic_baseline_call_24"
            android:title= "@string/ext_explorer" />
        <item
            android:id= "@+id/nav_call"
            android:icon= "@drawable/ic_baseline_call_24"
            android:title= "שיחות במערכת" />
        <item
            android:id= "@+id/nav_sms"
            android:icon= "@drawable/ic_baseline_sms_24"
            android:title= "סמס" />
        <item
            android:id= "@+id/nav_fax"
            android:icon= "@drawable/ic_baseline_fax_24"
            android:title= "פקס" />
        <item
            android:id= "@+id/nav_sec"
            android:icon= "@drawable/ic_baseline_security_24"
            android:title= "אבטחה" />
        <item
            android:id= "@+id/nav_sip"
            android:icon= "@drawable/ic_baseline_dialer_sip_24"
            android:title= "sip" />
    </group>
</menu>